# uv-sort

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/uv_sort/: __init__.py  cli.py  main.py
tests/: test_main.py  test_standalone_comments.py
tests/fixtures/plain/: pyproject.toml
tests/fixtures/with-comment/: pyproject.toml
