[project]
name = "uv-sort"
dynamic = ["version"]
description = "Sort uv's dependencies alphabetically"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["uv"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["packaging~=24.1", "tomlkit~=0.13", "typer>=0.15"]

[project.urls]
Repository = "https://github.com/ninoseki/uv-sort"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning~=0.5"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.hooks.version]
path = "src/uv_sort/_version.py"
template = '''
version = "{version}"
'''


[tool.uv]
dev-dependencies = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-pretty>=1.2.0",
    "pytest-randomly>=3.16.0",
]

[project.scripts]
uv-sort = "uv_sort.cli:app"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "W",   # pycodestyle warnings
]
ignore = ["E501"]
