[project]
name = "dummy"
version = "0.1.0"
description = "dummy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["foo", "bar"]

[project.optional-dependencies]
docs = ["foo", "bar"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["foo", "bar"]

[tool.uv.sources]
foo = { git = "https://github.com/ninoseki/foo" }
bar = { git = "https://github.com/ninoseki/bar" }

[dependency-groups]
dev = ["foo", "bar"]
