[project]
name = "dummy"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "foo",
  "bar", # baz
]

[project.optional-dependencies]
docs = [
  "foo",
  "bar", # baz
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "foo",
  "bar", # baz
]

[tool.uv.sources]
foo = { git = "https://github.com/ninoseki/foo" }
bar = { git = "https://github.com/ninoseki/bar" }

[dependency-groups]
# baz
dev = [
  "foo",
  "bar", # baz
]
